clusters/homelab/bootstrap/argocd/patch-argocd-dex-copyutil.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
  namespace: argocd
spec:
  template:
    spec:
